src/main/misc/grammerLayout.txt
# grammer notations
*    - zero or more
+    - one or more
?    - zero or one (optional)
|    - or / alternation
(...)- grouping

# expression structure grammer
expression -> literal | unary | binary | grouping ; CLASS
literal    -> NUMBER | STRING | "null" | "true" | "false" ; OBJECT
grouping   -> "(" expression ")" ; EXPR
unary      -> ( "-" | "!" ) expression ; TOKEN, EXPR
binary     -> expression operator expression ; EXPR TOKEN EXPR
operator   -> "==" | "!=" | "<" | "<=" | ">" | ">=" | "+"  | "-"  | "*" | "/" ; TOKEN


# parsing layer grammer
expression -> block ; EXPR
sequance   -> ternary ( ( "," ) ternary )* ; EXPR, (TOKEN, EXPR)...
assignment -> ( identifier "<-" )? assignment | ternary ;
ternary    -> equality ( ( "?" ) equality ( ":" ) equality )? ; EXPR, TOKEN, EXPR, TOKEN, EXPR
equality   -> comparison ( ( "!=" | "==" ) comparison )* ; EXPR, (TOKEN, EXPR)...
comparison -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ; EXPR, (TOKEN, EXPR)...
term       -> factor ( ( "-" | "+" ) factor )* ; EXPR, (TOKEN, EXPR)...
factor     -> unary ( ( "/" | "*" ) unary )* ; EXPR, (TOKEN, EXPR)...
unary      -> ( "!" | "-" ) unary | primary ; TOKEN, EXPR
primary    -> NUMBER | STRING | "true" | "false" | "null" | "(" expression ")" | IDENTIFIER ; EXPR

# top level grammer
program    -> declaration* EOF ;

declaration-> varDecl | statement ;
varDecl    -> "mish" IDENTIFIER ( "<-" expression )? ";" ;

statement  -> exprStmt | printStmt | block ;
block      -> "{" declaration* "}" ;
expression -> assignment ;
assignment -> IDENTIFIER "<-" assignment | equality ;

exprStmt   -> expression ";" ;
printStmt  -> "hadpes" expression ";" ;
