src/main/java/gmm/Parser.java
package main.java.gmm;

import java.util.ArrayList;
import java.util.List;
import java.util.function.Supplier;

import static main.java.gmm.TokenType.*;

class Parser {
    private static class ParseError extends RuntimeException {}

    final private List<Token> tokens;
    private int current_idx = 0;

    Parser(List<Token> tokens) {
        this.tokens = tokens;
    }

    List<Stmt> parse() {
        List<Stmt> statements = new ArrayList<>();

        while (!endOfFile()) {
            statements.add(statement());
        }
        return statements;
    }

    /* -- Heiarchy -- */

    // statements
    private Stmt statement() {
        if (match(PRINT)) return printStatement();

        return expressionStatement();
    }
    private Stmt printStatement() {
        Expr expr = expression();
        consume(SEMICOLON, "Expect ; after statement");
        return new Stmt.Print(expr);
    }

    private Stmt expressionStatement() {
        Expr expr = expression();
        consume(SEMICOLON, "Expect ';' after expression.");
        return new Stmt.Expression(expr);
    }

    // expressions
    private Expr expression() {
        return sequence();
    }
    private Expr sequence() {
        Expr lExpr = checkMissingLHO(this::ternary, COMMA);

        while (match(COMMA)) {
            Token operator = previous();
            Expr rExpr = sequence();
            lExpr = new Expr.Binary(lExpr, operator, rExpr);
        }
        return lExpr;
    }
    private Expr ternary() {
        Expr expr = checkMissingLHO(this::equality, QUESTION);

        if (match(QUESTION)) {
            Expr left = expression();
            consume(COLON, "Expect : after 'then' branch of ternary");
            Expr right = ternary();
            expr = new Expr.Ternary(expr, left, right);
        }
        return expr;
    }
    private Expr equality() {
        TokenType[] ops = {BANG_EQUAL, EQUAL_EQUAL};
        Expr expr = checkMissingLHO(this::comparison, ops);

        while (match(ops)) {
            Token operator = previous();
            Expr right = comparison();
            expr = new Expr.Binary(expr, operator, right);
        }
        return expr;
    }
    private Expr comparison() {
        TokenType[] ops = {LESS, GREATER, LESS_EQUAL, GREATER_EQUAL};
        Expr expr = checkMissingLHO(this::term, ops);

        while (match(ops)) {
            Token operator = previous();
            Expr right = term();
            expr = new Expr.Binary(expr, operator, right);
        }
        return expr;
    }
    private Expr term() {
        TokenType[] ops = {PLUS, MINUS};
        Expr expr = checkMissingLHO(this::factor, ops);

        while (match(ops)) {
            Token operator = previous();
            Expr right = factor();
            expr = new Expr.Binary(expr, operator, right);
        }
        return expr;
    }
    private Expr factor() {
        TokenType[] ops = {SLASH, STAR};
        Expr expr = checkMissingLHO(this::unary, ops);

        while (match(ops)) {
            Token operator = previous();
            Expr right = unary();
            expr = new Expr.Binary(expr, operator, right);
        }
        return expr;
    }
    private Expr unary() {
        TokenType[] ops = {MINUS, BANG};
        if (match(ops)) {
            Token operator = previous();
            Expr expr = unary();
            return new Expr.Unary(operator, expr);
        }
        return primary();
    }
    private Expr primary() {
        Token token = peek();

        switch (token.type) {
            case TRUE: advance(); return new Expr.Literal(true);
            case FALSE: advance(); return new Expr.Literal(false);
            case NULL: advance(); return new Expr.Literal(null);
            case NUMBER, STRING: advance(); return new Expr.Literal(token.literal);
            // ################################################################
            // TEMPRORAY JUST TO MAKE CODE RUN WITH NON NUMBERS AND STRINGS
            case IDENTIFIER: advance(); return new Expr.Literal(token.lexeme);
            // ################################################################
            case LEFT_PAREN:
                advance();
                Expr expr = expression();
                consume(RIGHT_PAREN, "Expect ')' after expression");
                return new Expr.Grouping(expr);
            default:
                throw error(peek(), "Expected expression.");
        }
    }

    // consume
    private Token consume(TokenType endToken, String message) {
        if (!endOfFile() && endToken == peek().type) return advance();
        throw error(peek(), message);
    }
    private Token advance() {
        if (!endOfFile()) current_idx++;
        return previous();
    }

    // non-consume
    private Token peek() {
        return tokens.get(current_idx);
    }
    private Token previous() {
        return tokens.get(current_idx - 1);
    }

    // special methods
    private boolean endOfFile() {
        return peek().type == EOF;
    }
    private Expr checkMissingLHO(Supplier<Expr> nextInHierarchy, TokenType... types) {
        if (match(types)) error(previous(), "Missing left-hand operand");
        return nextInHierarchy.get();
    }

    private boolean match(TokenType... targets) {
        if (endOfFile()) return false;

        boolean result = false;
        Token current_token = tokens.get(current_idx);

        for (TokenType type : targets) {
            result = type == current_token.type;
            if (result) break;
        }
        if (result) current_idx++;
        return result;
    }

    // error handeling
    private ParseError error(Token token, String message) {
        Gmm.error(token, message);
        return new ParseError();
    }
    private void synchronize() {
        advance();

        while (!endOfFile()) {
            if (previous().type == SEMICOLON) return;

            switch (peek().type) {
                case CLASS:
                case FUNCTION:
                case VAR:
                case FOR:
                case IF:
                case WHILE:
                case PRINT:
                case RETURN:
                    return;
            }
            advance();
        }
    }
}
